--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,8 @@
 
 <head>
     <link href="~/css/imageForSite.css" rel="stylesheet" />
-    <link href="~/css/likesite.css" rel="stylesheet" />
+    <link href="~/css/likeSite.css" rel="stylesheet" />
+
 </head>
 
 <table class="table">
