--- a/Views/Fanfics/Index.cshtml
+++ b/Views/Fanfics/Index.cshtml
@@ -6,8 +6,8 @@
 
 <h3>Мои фанфики</h3>
 <head>
-    <link href="~/css/imageForSite.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link href="~/css/likeSite.css" rel="stylesheet" />
 </head>
 
 <p>
@@ -31,6 +31,19 @@
                             <p class="text-muted">@Html.DisplayFor(modelItem => item.Genre.Name)</p>
                             <p>@Html.DisplayFor(modelItem => item.ShortDescription)</p>
                         </div>
+                        <form asp-action="LikeInYourFanfic" asp-controller="Fanfics" method="get">
+                            @if (item.IsLiked)
+                            {
+                                <button class="like-active basic">♥</button>
+                            }
+                            else
+                            {
+                                <button class="like-toggle basic">♥</button>
+                            }
+                            <input type="hidden" name="Id" value="@item.Id" />
+                            <input type="hidden" name="idUser" value="@item.UserId" />
+                            <span>@Html.DisplayFor(modelItem => item.kolLikes) Likes</span>
+                        </form>
                     </td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Редактировать</a>
