--- a/wwwroot/css/likesite.css
+++ b/wwwroot/css/likesite.css
@@ -17,7 +17,13 @@
 }
 
 .like-active.basic {
-
     background: blue;
     color: white;
+    outline: none;
+    box-shadow: none;
+    border: none;
+    width: 35px;
+    height: 35px;
+    font-size: 1.3em;
+    border-radius: 100px;
 }
